<resources>
    <string name="app_name">CarApp</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_agregar">AGREGAR</string>
    <string name="placa">Placa</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="guardado_exitoso">Carro guardado exitosamente</string>
    <string name="err_vacio">No debe haber campos vacíos</string>
    <string name="err_cero">Ingrese un valor mayor a cero</string>
    <string name="err_colores">Por favor selecciona un color</string>
    <string name="err_marcas">Por favor selecciona una marca</string>
    <string name="err_placa">Placa ya existe</string>

    <string name="rojo">Rojo</string>
    <string name="azul">Azul</string>
    <string name="blanco">Blanco</string>
    <string name="negro">Negro</string>

    <string name="kia">Kia</string>
    <string name="toyota">Toyota</string>
    <string name="renault">Renault</string>
    <string name="chevrolet">Chevrolet</string>
    <string name="subaru">Subaru</string>

    <string name="texto_colores">Colores</string>
    <string name="select_colores">Selecciona un color</string>
    <string-array name="colores">
        <item>@string/select_colores</item>
        <item>@string/rojo</item>
        <item>@string/negro</item>
        <item>@string/blanco</item>
        <item>@string/azul</item>
    </string-array>

    <string name="texto_marcas">Marcas</string>
    <string name="select_marcas">Selecciona una marca</string>
    <string-array name="marcas">
        <item>@string/select_marcas</item>
        <item>@string/kia</item>
        <item>@string/chevrolet</item>
        <item>@string/toyota</item>
        <item>@string/renault</item>
        <item>@string/subaru</item>
    </string-array>
</resources>
